apps/lute/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lute
  namespace: lute
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lute
  template:
    metadata:
      labels:
        app: lute
    spec:
      restartPolicy: Always
      containers:
        - name: lute
          image: "jzohrab/lute3:3.10.3@sha256:ca0c26b8160a6e68d15af9a0e8de3ee2443ca1587e1cf5091cece5907b0a05d4"
          ports:
            - name: http
              containerPort: 5001
          resources:
            limits:
              cpu: 50m
              memory: 512Mi
            requests:
              cpu: 1m
              memory: 256Mi
          volumeMounts:
            - name: data
              mountPath: /lute_data
            - name: backup
              mountPath: /lute_backup
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 30
            timeoutSeconds: 10
            periodSeconds: 30
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 30
            failureThreshold: 3
          securityContext:
            capabilities:
              add: ["DAC_OVERRIDE"]
              drop: ["ALL"]
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: lute-data
        - name: backup
          persistentVolumeClaim:
            claimName: lute-backup
  revisionHistoryLimit: 2
