apps/lute/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lute
  namespace: lute
spec:
  type: ClusterIP
  selector:
    app: lute
  ports:
    - name: lute-web
      protocol: TCP
      port: 80
      targetPort: 5001
