apps/lute/k8s/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: lute
  namespace: lute
spec:
  parentRefs:
    - name: homelab
      namespace: traefik
      sectionName: https
  hostnames:
    - lute.biplane.v6.rocks
  rules:
    - backendRefs:
        - name: lute
          port: 80
